--- a/dashboard.html
+++ b/dashboard.html
@@ -45,31 +45,35 @@
                         <hr>
                         <h6 class="text-muted small">Free Features</h6>
                         <a class="nav-link" href="#" onclick="showSection('cgpa')">📈 CGPA Calculator</a>
-                        <a class="nav-link" href="#" onclick="showSection('planner')">📅 Study Planner</a>
+                        <!-- <a class="nav-link" href="#" onclick="showSection('planner')">📅 Study Planner</a> -->
                         <a class="nav-link" href="#" onclick="showSection('todo')">✅ To-Do List</a>
                         <a class="nav-link" href="#" onclick="showSection('timer')">⏰ Simple Timer</a>
                         <a class="nav-link" href="#" onclick="showSection('notes')">📝 Notes</a>
                         <a class="nav-link" href="#" onclick="showSection('converter')">🔄 Unit Converter</a>
-                        <a class="nav-link" href="#" onclick="showSection('dictionary')">📖 Dictionary</a>
+                        <!-- <a class="nav-link" href="#" onclick="showSection('dictionary')">📖 Dictionary</a> -->
                         <a class="nav-link" href="#" onclick="showSection('timetable-basic')">📋 Basic Timetable</a>
                         <a class="nav-link" href="#" onclick="showSection('budget-basic')">💰 Basic Budget</a>
-                        <a class="nav-link" href="#" onclick="showSection('marketplace')">🛍️ Marketplace</a>
+                        <a class="nav-link" href="market.html" >🛍️ Marketplace</a>
+                        <a class="nav-link" href="blog.html">💬 Blog</a>
+                     
                         <a class="nav-link" href="#" onclick="showSection('community')">💬 Community</a>
                         <hr>
                         <h6 class="text-muted small">Premium Features</h6>
-                        <a class="nav-link premium-feature" href="#" onclick="showSection('advanced-planner')">⭐ Smart Study Planner</a>
+                        <!-- <a class="nav-link premium-feature" href="#" onclick="showSection('advanced-planner')">⭐ Smart Study Planner</a> -->
                         <a class="nav-link premium-feature" href="#" onclick="showSection('pomodoro')">🍅 Pomodoro Timer</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('flashcards')">📚 Flashcard Creator</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('calculator')">🧮 Scientific Calculator</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('goals')">🎯 Goal Tracker</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('habits')">🔄 Habit Tracker</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('vocabulary')">📚 Vocabulary Builder</a>
-                        <a class="nav-link premium-feature" href="#" onclick="showSection('timetable-premium')">📋 Premium Timetable</a>
+                        <!-- <a class="nav-link premium-feature" href="#" onclick="showSection('timetable-premium')">📋 Premium Timetable</a> -->
                         <a class="nav-link premium-feature" href="#" onclick="showSection('budget-premium')">💰 Advanced Budget</a>
-                        <a class="nav-link premium-feature" href="#" onclick="showSection('attendance')">👥 Attendance Generator</a>
+                        <!-- <a class="nav-link premium-feature" href="#" onclick="showSection('attendance')">👥 Attendance Generator</a> -->
                         <a class="nav-link premium-feature" href="#" onclick="showSection('reports')">🧾 Report Card Generator</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('vip-community')">👑 VIP Community</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('promotion')">📢 Promotion Tools</a>
+                        <a class="nav-link premium-feature" href="tool.html" >📢 Business Tools</a>
+                        <a class="nav-link premium-feature" href="gigs.html" >📢 Job vacancies & Gigs </a>
                         <hr>
                         <h6 class="text-muted small">Support</h6>
                         <a class="nav-link" href="#" onclick="showSection('support')">💬 Contact & Social</a>
@@ -523,7 +527,8 @@
                                         <div class="card-body">
                                             <h6>👑 VIP Community Lounge</h6>
                                             <p class="text-muted small">Access premium-only discussions with exclusive content and networking opportunities.</p>
-                                            <button class="btn btn-primary premium-feature w-100">Join VIP Lounge</button>
+                                              <p class="text-muted small">Also get acess to past questions and other digital materials</p>
+                                            <button href="https://t.me/+Ec2r_TwSfuVlYTVk" class="btn btn-primary premium-feature w-100">Join VIP Lounge</button>
                                         </div>
                                     </div>
                                 </div>
@@ -1414,13 +1419,13 @@
                                         <div class="card-body">
                                             <h5>🌐 Follow Us</h5>
                                             <div class="d-grid gap-2">
-                                                <a href="#" target="_blank" class="btn btn-primary">
+                                                <a href="https://t.me/+Ec2r_TwSfuVlYTVk" target="_blank" class="btn btn-primary">
                                                     📱 Join our Telegram
                                                 </a>
-                                                <a href="#" target="_blank" class="btn btn-dark">
+                                                <a href="https://www.tiktok.com/@campus.boost1" target="_blank" class="btn btn-dark">
                                                     🎵 Follow on TikTok
                                                 </a>
-                                                <a href="#" target="_blank" class="btn btn-info">
+                                                <a href="mailto:boostcampus9@gmail.com" target="_blank" class="btn btn-info">
                                                     📧 Subscribe to Updates
                                                 </a>
                                             </div>
