--- a/dashboard.html
+++ b/dashboard.html
@@ -66,9 +66,9 @@
                         <a class="nav-link premium-feature" href="#" onclick="showSection('goals')">🎯 Goal Tracker</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('habits')">🔄 Habit Tracker</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('vocabulary')">📚 Vocabulary Builder</a>
-                        <!-- <a class="nav-link premium-feature" href="#" onclick="showSection('timetable-premium')">📋 Premium Timetable</a> -->
+                        <a class="nav-link premium-feature" href="timetable.html"">📋 Premium Timetable</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('budget-premium')">💰 Advanced Budget</a>
-                        <!-- <a class="nav-link premium-feature" href="#" onclick="showSection('attendance')">👥 Attendance Generator</a> -->
+                        <a class="nav-link premium-feature" href="attend.html"">👥 Attendance Generator</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('reports')">🧾 Report Card Generator</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('vip-community')">👑 VIP Community</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('promotion')">📢 Promotion Tools</a>
@@ -491,37 +491,7 @@
                         <div class="card-body">
                             <h3 class="fw-bold mb-4">💬 Community Discussions</h3>
                             <div class="row">
-                                <div class="col-md-8">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <h5>📚 Study Group Discussions</h5>
-                                        </div>
-                                        <div class="card-body">
-                                            <div class="discussion-item border-bottom pb-3 mb-3">
-                                                <div class="d-flex justify-content-between">
-                                                    <h6>Need help with Calculus</h6>
-                                                    <small class="text-muted">2 hours ago</small>
-                                                </div>
-                                                <p class="text-muted small">Looking for study partners for upcoming exam...</p>
-                                                <div class="d-flex gap-2">
-                                                    <span class="badge bg-primary">Mathematics</span>
-                                                    <span class="text-muted small">12 replies</span>
-                                                </div>
-                                            </div>
-                                            <div class="discussion-item border-bottom pb-3 mb-3">
-                                                <div class="d-flex justify-content-between">
-                                                    <h6>Selling Physics Textbook</h6>
-                                                    <small class="text-muted">5 hours ago</small>
-                                                </div>
-                                                <p class="text-muted small">University Physics 14th Edition, good condition...</p>
-                                                <div class="d-flex gap-2">
-                                                    <span class="badge bg-success">Marketplace</span>
-                                                    <span class="text-muted small">8 replies</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                                 <div class="col-md-4">
                                     <div class="card">
                                         <div class="card-body">
