--- a/dashboard.html
+++ b/dashboard.html
@@ -73,6 +73,8 @@
                         <a class="nav-link premium-feature" href="#" onclick="showSection('vip-community')">👑 VIP Community</a>
                         <a class="nav-link premium-feature" href="#" onclick="showSection('promotion')">📢 Promotion Tools</a>
                         <a class="nav-link premium-feature" href="tool.html" >📢 Business Tools</a>
+                        <a class="nav-link premium-feature" href="social.html" >📢  Social media market place </a>
+                        <a class="nav-link premium-feature" href="love.html" >❤️ Love Hub</a>
                         <a class="nav-link premium-feature" href="gigs.html" >📢 Job vacancies & Gigs </a>
                         <hr>
                         <h6 class="text-muted small">Support</h6>
@@ -154,16 +156,20 @@
                         </div>
                         <div class="col-lg-4 mb-4">
                             <div class="card dashboard-card">
-                                <div class="card-body">
-                                    <h5 class="card-title">📢 Latest Updates</h5>
-                                    <div class="small">
-                                        <div class="mb-2">🎉 Welcome to your 30-day free trial!</div>
-                                        <div class="mb-2">📚 New study planner features added</div>
-                                        <div class="mb-2">💰 Budget allocator now available</div>
-                                        <div class="text-muted">More updates coming soon...</div>
-                                    </div>
-                                </div>
-                            </div>
+    <div class="card-body">
+        <h5 class="card-title">📢 Latest Updates</h5>
+        <div class="small">
+            <div class="mb-2">🎉 Welcome to your 30-day free trial!</div>
+            <div class="mb-2">📚 New study planner features added</div>
+            <div class="mb-2">💰 Budget allocator now available</div>
+            <div class="mb-2">❤️ Love Hub added</div>
+            <div class="mb-2">🗓️ Attendance Generator added</div>
+            <div class="mb-2">📢 Social Media Market added</div>
+            <div class="mt-2 text-muted">ℹ️ For more information on how to use our tools, click <strong><a class="nav-link" href="#" onclick="showSection('support')">Contact & Socials</a></strong> — we post videos to teach people how to use them.</div>
+        </div>
+    </div>
+</div>
+
                         </div>
                     </div>
                 </div>
