--- a/index.html
+++ b/index.html
@@ -475,6 +475,28 @@
                         </div>
                     </div>
                 </div>
+
+<div class="col-lg-3 col-md-6 mb-4">
+    <div class="card h-100 border-danger">
+        <div class="card-body text-center">
+            <div class="feature-icon mb-3">❤️</div>
+            <h6>Love Hub</h6>
+            <small class="text-muted">Find love & relationship advice</small>
+        </div>
+    </div>
+</div>
+
+<!-- Social Media Market -->
+<div class="col-lg-3 col-md-6 mb-4">
+    <div class="card h-100 border-success">
+        <div class="card-body text-center">
+            <div class="feature-icon mb-3">📢</div>
+            <h6>Social Media Market</h6>
+            <small class="text-muted">Advertise & grow your followers</small>
+        </div>
+    </div>
+</div>
+
             </div>
 
 
