--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="reviews.html">Reviews</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link btn btn-outline-primary px-3 ms-2" href="register.html">Get Started</a>
                     </li>
                 </ul>
