--- a/reviews.html
+++ b/reviews.html
@@ -12,16 +12,12 @@
       --text-dark: #1F2937;
       --text-muted: #6B7280;
     }
-
     body {
       font-family: 'Segoe UI', sans-serif;
       background: var(--background-color);
       color: var(--text-dark);
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
     }
-
     header {
       background: var(--primary-color);
       color: white;
@@ -29,17 +25,12 @@
       padding: 20px;
       font-size: 1.6rem;
     }
-
     .container {
       max-width: 800px;
       margin: 20px auto;
       padding: 20px;
     }
-
-    h2 {
-      color: var(--primary-color);
-    }
-
+    h2 { color: var(--primary-color); }
     input, select, textarea, button {
       width: 100%;
       padding: 10px;
@@ -49,18 +40,13 @@
       border: 1px solid #ccc;
       box-sizing: border-box;
     }
-
     button {
       background: var(--accent-color);
       color: white;
       border: none;
       cursor: pointer;
     }
-
-    button:hover {
-      opacity: 0.95;
-    }
-
+    button:hover { opacity: 0.95; }
     .review {
       background: white;
       margin: 15px 0;
@@ -69,12 +55,7 @@
       border-radius: 8px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.05);
     }
-
-    .stars {
-      color: gold;
-      font-size: 1.2em;
-    }
-
+    .stars { color: gold; font-size: 1.2em; }
     .filter-sort {
       display: flex;
       justify-content: space-between;
@@ -82,7 +63,6 @@
       flex-wrap: wrap;
       gap: 10px;
     }
-
     .stats-box {
       background: white;
       padding: 15px;
@@ -90,20 +70,17 @@
       margin-bottom: 15px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.05);
     }
-
     .stat-line {
       display: flex;
       align-items: center;
       gap: 10px;
       margin: 6px 0;
     }
-
     .bar {
       height: 8px;
       background: var(--primary-color);
       border-radius: 5px;
     }
-
     @media (max-width: 600px) {
       .filter-sort {
         flex-direction: column;
@@ -117,7 +94,6 @@
 <header>Campus Boost Reviews</header>
 
 <div class="container">
-
   <h2>Leave a Review</h2>
   <input type="text" id="name" placeholder="Your name">
   <select id="rating">
@@ -129,11 +105,11 @@
     <option value="1">1 Star ⭐</option>
   </select>
   <textarea id="comment" rows="4" placeholder="What do you think about Campus Boost?"></textarea>
-  <button onclick="addReview()">Submit Review</button>
+  <button id="submitBtn">Submit Review</button>
 
   <div class="filter-sort">
     <h2>All Reviews</h2>
-    <select onchange="filterReviews(this.value)" id="filterSelect">
+    <select id="filterSelect">
       <option value="all">Show All</option>
       <option value="5">5 Star</option>
       <option value="4">4 Star</option>
@@ -143,18 +119,34 @@
     </select>
   </div>
 
-  <div class="stats-box" id="statsBox">
-    </div>
-
+  <div class="stats-box" id="statsBox"></div>
   <div id="reviewList"></div>
 </div>
 
-<script>
-  // Functions for getting and saving reviews to Local Storage
-  const getReviews = () => JSON.parse(localStorage.getItem("reviews")) || [];
-  const saveReviews = (data) => localStorage.setItem("reviews", JSON.stringify(data));
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
+  import { getFirestore, collection, addDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-firestore.js";
 
-  function addReview() {
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDDZgCkmOnSrRLBNz7xkCWeAlBI07_qxLo",
+    authDomain: "reviews-123e2.firebaseapp.com",
+    projectId: "reviews-123e2",
+    storageBucket: "reviews-123e2.firebasestorage.app",
+    messagingSenderId: "872644636639",
+    appId: "1:872644636639:web:833e1212fc6f52e9719e6a",
+    measurementId: "G-GTHB0TS3LC"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  const reviewList = document.getElementById("reviewList");
+  const statsBox = document.getElementById("statsBox");
+  const filterSelect = document.getElementById("filterSelect");
+
+  document.getElementById("submitBtn").addEventListener("click", async () => {
     const name = document.getElementById("name").value.trim();
     const rating = parseInt(document.getElementById("rating").value);
     const comment = document.getElementById("comment").value.trim();
@@ -164,68 +156,35 @@
       return;
     }
 
-    const newReview = {
-      name,
-      rating,
-      comment,
-      time: new Date().toISOString()
-    };
+    try {
+      await addDoc(collection(db, "reviews"), {
+        name,
+        rating,
+        comment,
+        time: new Date().toISOString()
+      });
 
-    const reviews = getReviews();
-    reviews.push(newReview);
-    saveReviews(reviews);
-
-    // Clear input fields after submission
-    document.getElementById("name").value = "";
-    document.getElementById("rating").value = "";
-    document.getElementById("comment").value = "";
-
-    // Re-render the reviews and stats
-    renderReviews();
-  }
-
-  function renderReviews(filter = "all") {
-    const allReviews = getReviews();
-    const filteredReviews = filter === "all" ? allReviews : allReviews.filter(r => r.rating == filter);
-
-    filteredReviews.sort((a, b) => new Date(b.time) - new Date(a.time)); // Sort by newest first
-
-    const container = document.getElementById("reviewList");
-    container.innerHTML = "";
-
-    if (filteredReviews.length === 0) {
-      container.innerHTML = "<p>No reviews available.</p>";
-      return;
+      document.getElementById("name").value = "";
+      document.getElementById("rating").value = "";
+      document.getElementById("comment").value = "";
+    } catch (error) {
+      console.error("Error adding review: ", error);
     }
-
-    filteredReviews.forEach(r => {
-      const review = document.createElement("div");
-      review.className = "review";
-      review.innerHTML = `
-        <div class="stars">${'⭐'.repeat(r.rating)}</div>
-        <strong>${r.name}</strong> <small style="color:var(--text-muted)">(${new Date(r.time).toLocaleDateString()})</small>
-        <p>${r.comment}</p>
-      `;
-      container.appendChild(review);
-    });
-
-    renderStats(allReviews);
-  }
+  });
 
   function renderStats(reviews) {
-    const statsContainer = document.getElementById("statsBox");
     if (!reviews.length) {
-      statsContainer.innerHTML = "";
+      statsBox.innerHTML = "";
       return;
     }
 
     const total = reviews.length;
     const avg = (reviews.reduce((sum, r) => sum + r.rating, 0) / total).toFixed(1);
 
-    const stars = [0, 0, 0, 0, 0]; // index 0 = 1 star, 4 = 5 stars
+    const stars = [0, 0, 0, 0, 0];
     reviews.forEach(r => stars[r.rating - 1]++);
 
-    statsContainer.innerHTML = `
+    statsBox.innerHTML = `
       <h3>Review Stats</h3>
       <p><strong>Average Rating:</strong> ${avg} / 5 ⭐</p>
       <p><strong>Total Reviews:</strong> ${total}</p>
@@ -244,12 +203,28 @@
     `;
   }
 
-  function filterReviews(val) {
-    renderReviews(val);
+  function renderReviews(reviews, filter = "all") {
+    const filtered = filter === "all" ? reviews : reviews.filter(r => r.rating == filter);
+    reviewList.innerHTML = filtered.length
+      ? filtered.map(r => `
+        <div class="review">
+          <div class="stars">${'⭐'.repeat(r.rating)}</div>
+          <strong>${r.name}</strong> <small style="color:var(--text-muted)">(${new Date(r.time).toLocaleDateString()})</small>
+          <p>${r.comment}</p>
+        </div>
+      `).join("")
+      : "<p>No reviews available.</p>";
+
+    renderStats(reviews);
   }
 
-  // Initial render when the page loads
-  window.onload = () => renderReviews();
+  // Real-time listener for reviews
+  const q = query(collection(db, "reviews"), orderBy("time", "desc"));
+  onSnapshot(q, snapshot => {
+    const allReviews = snapshot.docs.map(doc => doc.data());
+    renderReviews(allReviews, filterSelect.value);
+    filterSelect.onchange = () => renderReviews(allReviews, filterSelect.value);
+  });
 </script>
 
 </body>
